# polygeohasher

./: .gitignore  LICENCE.txt  README.md  polygeohasher.py  pyproject.toml  requirements.txt  setup.py  version.py
.github/workflows/: pylint.yml
.kiro/specs/code-organization-refactor/: design.md  requirements.md  tasks.md
data/: sample.geojson
example/: example.py  primary.geojson  sample.geojson  secondary.geojson
polygeohasher/: __init__.py  converters.py  core.py  polygeohasher.py  polygon_geohash_convertor.py  utils.py
polygeohasher.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_converters.py  test_core.py  test_polygeohasher.py  test_utils.py
tests/fixtures/: __init__.py  sample_data.py
